[package]
name = "client"
version = "0.1.0"
edition = "2021"
authors = ["isomo"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
url = "2.5.4"
serde_json = "1.0.133"
